[gd_scene load_steps=10 format=3 uid="uid://cb0un0n5e7t8w"]

[ext_resource type="Script" uid="uid://cj78rwxslvbm2" path="res://scripts/map.gd" id="1"]
[ext_resource type="Shader" uid="uid://dv3mgn6fcr8wu" path="res://shader/blur_bg.gdshader" id="2"]
[ext_resource type="Shader" uid="uid://bdarqlbs74ceo" path="res://shader/deck_view_mask.gdshader" id="3"]
[ext_resource type="PackedScene" uid="uid://3fcubh5tc7ji" path="res://scenes/sample_node.tscn" id="4"]
[ext_resource type="Shader" uid="uid://bp36vpprtd5b3" path="res://shader/map_sample_node.gdshader" id="5"]
[ext_resource type="Texture2D" uid="uid://cw4km1sew7yq5" path="res://UI/dot.png" id="6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4n6od"]
resource_local_to_scene = true
shader = ExtResource("2")
shader_parameter/lod = 3.0
shader_parameter/alpha = 0.0
shader_parameter/edge = 0.05
shader_parameter/darken = 0.4

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6j0nv"]
shader = ExtResource("3")
shader_parameter/edge = 0.05

[sub_resource type="ShaderMaterial" id="ShaderMaterial_myy5v"]
resource_local_to_scene = true
shader = ExtResource("5")
shader_parameter/randomizer = 0.0
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/width = 1.0
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true

[node name="Map" type="Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 142.0
offset_top = 198.0
offset_right = 25.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="BlurBg" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_4n6od")
layout_mode = 0
offset_left = -472.0
offset_top = -229.0
offset_right = 2403.0
offset_bottom = 1315.0
color = Color(1, 1, 1, 0)

[node name="Mask" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_6j0nv")
layout_mode = 0
offset_left = -331.0
offset_top = -151.0
offset_right = 2196.0
offset_bottom = 1246.0
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="SampleNode" parent="." instance=ExtResource("4")]
material = SubResource("ShaderMaterial_myy5v")
layout_mode = 1
anchors_preset = -1
anchor_left = -0.274947
anchor_top = 0.208945
anchor_right = -0.274947
anchor_bottom = 0.208945
mouse_filter = 1

[node name="SampleDot" type="Sprite2D" parent="."]
modulate = Color(0.577008, 0.577008, 0.577008, 1)
position = Vector2(-262, 13)
scale = Vector2(0.11, 0.11)
texture = ExtResource("6")

[node name="RefreshMap" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 1480.0
offset_top = -94.0
offset_right = 1695.0
offset_bottom = -18.0
theme_override_font_sizes/font_size = 25
text = "NEXTLEVEL"

[connection signal="gui_input" from="BlurBg" to="." method="_on_gui_input"]
[connection signal="pressed" from="RefreshMap" to="." method="_on_refresh_map_pressed"]
